--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
   },
   "packageManager": "yarn@3.2.1",
   "dependencies": {
+    "flowbite": "^1.5.1",
+    "flowbite-react": "^0.1.3",
     "react-awesome-spinners": "^1.3.1",
     "swr": "^1.3.0"
   }
